--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,6 @@
     <![endif]-->
   </head>
   <body class="hold-transition skin-blue sidebar-mini">
-
     <div id="wrapper">
 
       <a class="logo">
@@ -36,7 +35,6 @@
         <div id="signin-button">
           <button class="g-signin"
               data-scope="https://www.googleapis.com/auth/plus.login https://www.googleapis.com/auth/userinfo.email"
-              data-requestvisibleactions="http://schemas.google.com/AddActivity"
               data-clientId="768767255656-cs88prcq2s6olvb4dhsjdf2r7br50uej.apps.googleusercontent.com"
               data-callback="loginFinishedCallback"
               data-cookiepolicy="single_host_origin"
@@ -46,7 +44,7 @@
         </div>
       </div>
   
-    </div> <!-- ./wrapper -->
+    </div><!-- ./wrapper -->
 
     <!-- jQuery 2.1.4 -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -59,12 +57,11 @@
     <!-- Bootstrap 3.3.5 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- App -->
-    <script src="js/app.min.js"></script>
-    
-    <script src="https://apis.google.com/js/client.js?onload=init"></script>
-    <script src="/js/redirect.js"></script>
-    <script src="/js/oauth.js"></script>
+    <script src="/js/app.js"></script>
 
+    <!-- Oauth control -->
+    <script src="https://apis.google.com/js/client.js?onload=init"></script>
+    <script src="/js/oauth.js"></script>
     <script type="text/javascript">
     (function() {
       var po = document.createElement('script');
