Purchase fetures, pages and put service

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -73,8 +73,8 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
-      <span class="content-header-title">Título</span>
-      <small class="content-header-title">Subtítulo</small>
+      <span class="content-header-title"></span>
+      <small class="content-header-title"></small>
     </h1>
   </section>
 
