--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -7,21 +7,14 @@
 	<div class="tab-content">
 	  <div class="tab-pane active" id="tab_1">
 		<div class="box-body">
-			<table class="table-purchases table table-striped table-hover dataTable">
-				<thead>
-					<tr>
-						<th>Produto</th>
-						<th>Quantidade</th>
-						<th>Custo</th>
-						<th>Data Compra</th>
-					</tr>
-					<tbody>
-						<tr>	
-							<td colspan="4">Nenhum registro encontrado</td>						
-						</tr>
-					</tbody>
-				</thead>				
-			</table>	
+
+			<div class="progress progress-bar-table collapse">
+			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+			  </div>
+			</div>
+
+			<table class="table-purchases"></table>	
+
 		</div>
 	  </div><!-- /.tab-pane -->
 	  <div class="tab-pane" id="tab_2">
@@ -35,6 +28,11 @@
             <div class="box-header with-border">
               <h3 class="box-title">Dados da Compra <small>Informe os dados da compra</small></h3>
             </div><!-- /.box-header -->
+
+			<div class="progress progress-bar-form collapse">
+			  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+			  </div>
+			</div>
 
             <!-- form start -->
             <form role="form">
@@ -54,7 +52,7 @@
 
                 	<div class="col-md-6">
 
-                		<div class="box-header box box-info">
+                		<div class="box-header box box-primary">
 
 							<div class="form-group">
 			                  <label for="quantity">Quantidade</label>
@@ -73,7 +71,10 @@
 
 			                <div class="form-group">
 			                  <label for="shipping_cost">Custo de Postagem</label>
-			                  <input type="text" class="form-control" name="shipping_cost" placeholder="Entre com o custo de postagem">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
+									<input type="text" class="form-control" name="shipping_cost" placeholder="Entre com o custo de postagem">
+								</div>
 			                </div>
 
 			                <div class="form-group">
@@ -85,31 +86,46 @@
                 	</div><!-- /.col-md-6 -->
 
                 	<div class="col-md-6">
-						<div class="box-header box box-info">
+						<div class="box-header box box-primary">
 
 			                <div class="form-group">
 			                  <label for="cost">Custo por Unidade</label>
-			                  <input type="text" class="form-control" name="cost" placeholder="Entre com o custo por unidade">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
+									<input type="text" class="form-control" name="cost" placeholder="Entre com o custo por unidade">
+								</div>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="total_cost">Custo Total da Compra</label>
-			                  <input type="text" class="form-control" name="total_cost" placeholder="Entre com o custo total da compra">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
+		 		                    <input type="text" class="form-control" name="total_cost" placeholder="Entre com o custo total da compra">
+								</div>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="cost_dollar">Custo por Unidade (US$) </label>
-			                  <input type="text" class="form-control" name="cost_dollar" placeholder="Entre com o custo por unidade em dólares (US$)">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
+	 			                    <input type="text" class="form-control" name="cost_dollar" placeholder="Entre com o custo por unidade em dólares (US$)">
+								</div>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="total_cost_dollar">Custo Total da Compra (US$)</label>
-			                  <input type="text" class="form-control" name="total_cost_dollar" placeholder="Entre com o custo total da compra em dólares">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
+	  			                    <input type="text" class="form-control" name="total_cost_dollar" placeholder="Entre com o custo total da compra em dólares">
+								</div>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="exchange_dollar">Valor do Câmbio</label>
-			                  <input type="text" class="form-control" name="exchange_dollar" placeholder="Entre com o valor do câmbio">
+								<div class="input-group">
+									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
+									<input type="text" class="form-control" name="exchange_dollar" placeholder="Entre com o valor do câmbio">
+								</div>
 			                </div>
 
 						</div><!-- /.box -->
