Finishing purchase feature

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Theme style -->
+     <!-- Theme style -->
     <link rel="stylesheet" href="/css/marketplace.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
@@ -41,9 +41,9 @@
           <div class="modal-body">
             <p class="modal-body-message"></p>
           </div>
-          <div class="modal-footer">
+<!--           <div class="modal-footer">
             <button type="button" class="btn btn-outline" data-dismiss="modal">Ok</button>
-          </div>
+          </div> -->
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
@@ -95,6 +95,11 @@
     <script src="/js/plugins/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
     <script src="/js/plugins/fastclick.min.js"></script>
+    <!-- InputMask -->
+    <script src="/js/plugins/jquery.inputmask.min.js"></script>
+    <!-- Datepicker -->
+    <link rel="stylesheet" href="/css/plugins/bootstrap-datepicker.min.css">
+    <script src="/js/plugins/bootstrap-datepicker.min.js"></script>
     <!-- App -->
     <script src="/js/app.js"></script>
 
