--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -36,14 +36,16 @@
 
             <!-- form start -->
             <form role="form">
+              <input type="text" name="id" style="display: none;" />
+
               <div class="box-body">
 
-                <div class="form-group">
+                <div class="form-group required">
                   <label for="product">Produto</label>
                   <input type="text" class="form-control" name="product" placeholder="Entre com o nome do produto">
                 </div>
 
-                <div class="form-group">
+                <div class="form-group required">
                   <label for="suppier">Fornecedor</label>
                   <input type="text" class="form-control" name="supplier" placeholder="Entre com o nome do fornecedor">
                 </div>
@@ -54,26 +56,38 @@
 
                 		<div class="box-header box box-primary">
 
-							<div class="form-group">
+							<div class="form-group required">
 			                  <label for="quantity">Quantidade</label>
-			                  <input type="text" class="form-control" name="quantity" placeholder="Entre com a quantidade de itens comprados">
+			                  <input type="text" class="form-control" name="quantity" placeholder="Entre com a quantidade de itens comprados"
+			                  data-inputmask="'alias': 'numeric'">
 			                </div>
 
-			                <div class="form-group">
+			                <div class="form-group required">
 			                  <label for="purchase_date">Data da Compra</label>
-			                  <input type="text" class="form-control" name="purchase_date" placeholder="Entre com a data da compra">
+								<div class="input-group">
+								  <div class="input-group-addon">
+								    <i class="fa fa-calendar"></i>
+								  </div>
+				                  <input type="text" class="form-control pull-right datepicker" name="purchase_date" placeholder="Entre com a data da compra">
+								</div><!-- /.input group -->
+								<label id="purchase_date-error" class="error" for="purchase_date" style="display : none;">Data da Compra é obrigatória!</label>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="received_date">Data de Recebimento</label>
-			                  <input type="text" class="form-control" name="received_date" placeholder="Entre com a data do recebimento">
+							  <div class="input-group">
+								  <div class="input-group-addon">
+								    <i class="fa fa-calendar"></i>
+								  </div>
+				                  <input type="text" class="form-control pull-right datepicker" name="received_date" placeholder="Entre com a data do recebimento">
+			                	</div>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="shipping_cost">Custo de Postagem</label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
-									<input type="text" class="form-control" name="shipping_cost" placeholder="Entre com o custo de postagem">
+									<input type="text" class="form-control" name="shipping_cost" placeholder="Entre com o custo de postagem" data-inputmask="'alias' : 'currency', 'groupSeparator' : '', 'prefix' : ''">
 								</div>
 			                </div>
 
@@ -88,19 +102,20 @@
                 	<div class="col-md-6">
 						<div class="box-header box box-primary">
 
-			                <div class="form-group">
+			                <div class="form-group required">
 			                  <label for="cost">Custo por Unidade</label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
-									<input type="text" class="form-control" name="cost" placeholder="Entre com o custo por unidade">
+									<input type="text" class="form-control" name="cost" placeholder="Entre com o custo por unidade" data-inputmask="'alias' : 'currency', 'groupSeparator' : '', 'prefix' : ''">
 								</div>
+								<label id="cost-error" class="error" style="display: none;" for="cost">Custo por unidade é numérico e obrigatório!</label>
 			                </div>
 
 			                <div class="form-group">
 			                  <label for="total_cost">Custo Total da Compra</label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
-		 		                    <input type="text" class="form-control" name="total_cost" placeholder="Entre com o custo total da compra">
+		 		                    <input type="text" class="form-control" name="total_cost" placeholder="Entre com o custo total da compra" data-inputmask="'alias' : 'currency', 'groupSeparator' : '', 'prefix' : ''">
 								</div>
 			                </div>
 
@@ -108,7 +123,7 @@
 			                  <label for="cost_dollar">Custo por Unidade (US$) </label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
-	 			                    <input type="text" class="form-control" name="cost_dollar" placeholder="Entre com o custo por unidade em dólares (US$)">
+	 			                    <input type="text" class="form-control" name="cost_dollar" placeholder="Entre com o custo por unidade em dólares (US$)" data-inputmask="'alias' : 'currency', 'groupSeparator' : '', 'prefix' : ''">
 								</div>
 			                </div>
 
@@ -116,7 +131,7 @@
 			                  <label for="total_cost_dollar">Custo Total da Compra (US$)</label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
-	  			                    <input type="text" class="form-control" name="total_cost_dollar" placeholder="Entre com o custo total da compra em dólares">
+	  			                    <input type="text" class="form-control" name="total_cost_dollar" placeholder="Entre com o custo total da compra em dólares" data-inputmask="'alias' : 'currency', 'groupSeparator' : '', 'prefix' : ''">
 								</div>
 			                </div>
 
@@ -124,7 +139,7 @@
 			                  <label for="exchange_dollar">Valor do Câmbio</label>
 								<div class="input-group">
 									<span class="input-group-addon"><i class="fa fa-dollar"></i></span>
-									<input type="text" class="form-control" name="exchange_dollar" placeholder="Entre com o valor do câmbio">
+									<input type="text" class="form-control" name="exchange_dollar" placeholder="Entre com o valor do câmbio" data-inputmask="'alias' : 'currency', 'groupSeparator' : '', 'prefix' : ''">
 								</div>
 			                </div>
 
