--- a/static/app/main.html
+++ b/static/app/main.html
@@ -61,9 +61,19 @@
 
       <li><a href="#" class="menu-purchase"><i class="ion ion-ios-cart-outline"></i> <span>Compras</span></a></li>
 
-      <li><a href="documentation/index.html"><i class="ion ion-bag"></i> <span>Vendas</span></a></li>
+      <li><a href="#" class="menu-sale"><i class="ion ion-bag"></i> <span>Vendas</span></a></li>
 
     </ul>
+    <ul class="sidebar-menu">
+
+      <li class="header">Cadastros</li>
+
+      <li><a href="#" class="menu-product"><i class="ion ion-android-archive"></i> <span>Produtos</span></a></li>
+
+      <li><a href="#" class="menu-supplier"><i class="ion ion-ios-people"></i> <span>Fornecedores</span></a></li>
+
+    </ul>
+
   </section>
   <!-- /.sidebar -->
 </aside>
