--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,6 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="/css/plugins/dataTables.bootstrap.css">
     <!-- Font Awesome -->
@@ -73,7 +72,7 @@
     <!-- jQuery UI 1.11.4 -->
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
-
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css">
 
@@ -100,6 +99,10 @@
     <!-- Datepicker -->
     <link rel="stylesheet" href="/css/plugins/bootstrap-datepicker.min.css">
     <script src="/js/plugins/bootstrap-datepicker.min.js"></script>
+    <!-- Moment -->
+    <script src="/js/plugins/moment.min.js"></script>
+    <!-- jQuery Serialize Object -->
+    <script src="/js/plugins/jquery.serialize-object.min.js"></script>
     <!-- App -->
     <script src="/js/app.js"></script>
 
