--- a/static/app/main.html
+++ b/static/app/main.html
@@ -97,7 +97,7 @@
 
 <footer class="main-footer">
   <div class="pull-right hidden-xs">
-    <b>Version</b> 1.0 beta
+    <b>Version</b> alpha
   </div>
   <strong>Market</strong>place 
 </footer>
