Finalizando feature de produtos e implementado i18n

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -68,7 +68,7 @@
 
       <li class="header">Cadastros</li>
 
-      <li><a href="#" class="menu-product"><i class="ion ion-android-archive"></i> <span>Produtos</span></a></li>
+      <li><a href="#" class="menu-product"><i class="ion ion-cube"></i> <span>Produtos</span></a></li>
 
       <li><a href="#" class="menu-supplier"><i class="ion ion-ios-people"></i> <span>Fornecedores</span></a></li>
 
@@ -83,6 +83,7 @@
   <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
+      <i class="icon-title ion"></i>
       <span class="content-header-title"></span>
       <small class="content-header-title"></small>
     </h1>
