--- a/static/index.html
+++ b/static/index.html
@@ -73,6 +73,7 @@
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css">
 
@@ -88,6 +89,8 @@
     </script>
     <!-- Bootstrap 3.3.5 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- JQuery i18n plugin -->
+    <script src="js/plugins/jquery.i18n.properties.min.js"></script>
      <!-- DataTables -->
     <script src="/js/plugins/jquery.dataTables.min.js"></script>
     <!-- SlimScroll -->
