Google maps implementation

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -3,9 +3,9 @@
   <!-- Logo -->
   <a href="." class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini"><b>Mkt</b>p</span>
+    <span class="logo-mini">o<b>Mkt</b>p</span>
     <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg"><b>Market</b>place</span>
+    <span class="logo-lg">open<b>Market</b>place</span>
   </a>
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top" role="navigation">
@@ -55,24 +55,7 @@
     </div>
 
     <!-- sidebar menu: : style can be found in sidebar.less -->
-    <ul class="sidebar-menu">
-
-      <li class="header">Estoque</li>
-
-      <li><a href="#" class="menu-purchase"><i class="ion ion-ios-cart-outline"></i> <span>Compras</span></a></li>
-
-      <li><a href="#" class="menu-sale"><i class="ion ion-bag"></i> <span>Vendas</span></a></li>
-
-    </ul>
-    <ul class="sidebar-menu">
-
-      <li class="header">Cadastros</li>
-
-      <li><a href="#" class="menu-product"><i class="ion ion-cube"></i> <span>Produtos</span></a></li>
-
-      <li><a href="#" class="menu-supplier"><i class="ion ion-ios-people"></i> <span>Fornecedores</span></a></li>
-
-    </ul>
+    <ul class="sidebar-menu top-menu"></ul>
 
   </section>
   <!-- /.sidebar -->
