--- a/static/index.html
+++ b/static/index.html
@@ -92,20 +92,20 @@
     <!-- JQuery i18n plugin -->
     <script src="js/plugins/jquery.i18n.properties.min.js"></script>
      <!-- DataTables -->
-    <script src="/js/plugins/jquery.dataTables.min.js"></script>
+    <script async src="/js/plugins/jquery.dataTables.min.js"></script>
     <!-- SlimScroll -->
     <script src="/js/plugins/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
     <script src="/js/plugins/fastclick.min.js"></script>
     <!-- InputMask -->
-    <script src="/js/plugins/jquery.inputmask.min.js"></script>
+    <script async src="/js/plugins/jquery.inputmask.min.js"></script>
     <!-- Datepicker -->
     <link rel="stylesheet" href="/css/plugins/bootstrap-datepicker.min.css">
-    <script src="/js/plugins/bootstrap-datepicker.min.js"></script>
+    <script async src="/js/plugins/bootstrap-datepicker.min.js"></script>
     <!-- Moment -->
-    <script src="/js/plugins/moment.min.js"></script>
+    <script async src="/js/plugins/moment.min.js"></script>
     <!-- jQuery Serialize Object -->
-    <script src="/js/plugins/jquery.serialize-object.min.js"></script>
+    <script async src="/js/plugins/jquery.serialize-object.min.js"></script>
     <!-- App -->
     <script src="/js/app.js"></script>
 
@@ -121,5 +121,8 @@
       s.parentNode.insertBefore(po, s);
     })();
     </script>
+
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBltNDQD8uY9uRjEDoz8NG8LJ7QgYGIJ8c&libraries=places"></script>
+
   </body>
 </html>
