Dev feature supplier

--- a/static/app/main.html
+++ b/static/app/main.html
@@ -83,7 +83,7 @@
   <div class="pull-right hidden-xs">
     <b>Version</b> alpha
   </div>
-  <strong>Market</strong>place 
+  open<strong>Market</strong>place 
 </footer>
 
 <!-- Add the sidebar's background. This div must be placed
