--- a/static/app/supplier/supplier.html
+++ b/static/app/supplier/supplier.html
@@ -42,18 +42,27 @@
 
                 <div class="form-group required">
                   <label for="suppier" class="name"></label>
-                  <input type="text" class="form-control" name="name" placeholder="">
+                  <input type="text" class="form-control" name="name" />
+                </div>
+                
+                <div class="form-group">
+                  <label for="suppier" class="email"></label>
+                  <div class="input-group">
+                    <span class="input-group-addon">@</span>
+                    <input type="text" class="form-control" name="email" />
+                  </div>
+                  <label id="email-error" class="error" for="email"></label>
                 </div>
 
                 <div class="form-group">
                   <label for="suppier" class="phone"></label>
-                  <input type="text" class="form-control" name="phone" placeholder="">
+                  <input type="text" class="form-control" name="phone" />
                 </div>
 
                 <div class="form-group">
                   <label for="suppier" class="location"></label>
-                  <input type="text" class="form-control" name="location" placeholder="">
-				  <div class="map-canvas"></div>
+                  <input type="text" class="form-control" name="location" />
+				          <div class="map-canvas"></div>
                 </div>
 
               </div><!-- /.box-body -->
