Add clients management feature

--- a/static/app/customer/customer.html
+++ b/static/app/customer/customer.html
@@ -13,20 +13,20 @@
 			  </div>
 			</div>
 
-			<table class="table-suppliers"></table>	
+			<table class="table-customers"></table>	
 
 		</div>
 	  </div><!-- /.tab-pane -->
 	  <div class="tab-pane" id="tab_2">
 
-	  	<form class="supplier-form">
+	  	<form class="customer-form">
 
           <!-- general form elements -->
           <div class="box box-primary">
 
 	        <!-- box-header -->
             <div class="box-header with-border">
-              <h3 class="box-title supplier_save_title"><small class="supplier_save_subtitle"></small></h3>
+              <h3 class="box-title customer_save_title"><small class="customer_save_subtitle"></small></h3>
               <button type="button" class="btn btn-link pull-right new-item"><span class="fa fa-plus"/> <span class="new-item"></span></button>
             </div><!-- /.box-header -->
 
