--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -48,7 +48,8 @@
 
                 <div class="form-group required">
                   <label for="suppier">Fornecedor</label>
-                  <input type="text" class="form-control" name="supplier" placeholder="Entre com o nome do fornecedor">
+                  <input type="text" name="supplier[id]" style="display: none;" />
+                  <input type="text" class="form-control" name="supplier[name]" placeholder="Entre com o nome do fornecedor">
                 </div>
 
                 <div class="row">
