Backend implementation dashboard #11

--- a/static/app/purchase/purchase.html
+++ b/static/app/purchase/purchase.html
@@ -75,6 +75,17 @@
 								<label id="purchase_date-error" class="error" for="purchase_date" style="display : none;">Data da Compra é obrigatória!</label>
 			                </div>
 
+			                <div class="form-group required">
+			                  <label for="received_date">Data do Pagamento</label>
+							  <div class="input-group">
+								  <div class="input-group-addon">
+								    <i class="fa fa-calendar"></i>
+								  </div>
+				                  <input type="text" class="form-control pull-right datepicker" name="payment_date" placeholder="Entre com a data do pagamento">
+			                	</div>
+								<label id="payment_date-error" class="error" for="payment_date" style="display : none;"></label>
+			                </div>
+
 			                <div class="form-group">
 			                  <label for="received_date">Data de Recebimento</label>
 							  <div class="input-group">
@@ -82,16 +93,6 @@
 								    <i class="fa fa-calendar"></i>
 								  </div>
 				                  <input type="text" class="form-control pull-right datepicker" name="received_date" placeholder="Entre com a data do recebimento">
-			                	</div>
-			                </div>
-
-			                <div class="form-group">
-			                  <label for="received_date">Data do Pagamento</label>
-							  <div class="input-group">
-								  <div class="input-group-addon">
-								    <i class="fa fa-calendar"></i>
-								  </div>
-				                  <input type="text" class="form-control pull-right datepicker" name="payment_date" placeholder="Entre com a data do pagamento">
 			                	</div>
 			                </div>
 
