--- a/static/index.html
+++ b/static/index.html
@@ -106,6 +106,10 @@
     <script async src="/js/plugins/moment.min.js"></script>
     <!-- jQuery Serialize Object -->
     <script async src="/js/plugins/jquery.serialize-object.min.js"></script>
+    <!-- Morris.js charts -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+    <script async defer src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script async defer src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
     <!-- App -->
     <script src="/js/app.js"></script>
 
